fixed menu icon position on mobile

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -233,6 +233,9 @@ header{
 	.menu{
 		padding-top: 36px;
 		text-align: right;
+		@media screen and (max-width: 340px){
+			padding-top: 18px;
+		}
 	}
 	.announce{
 		p{
